# Engine

./: .gitignore  CMakeLists.txt  README.md  engine.cc  engine.h  input.cc  input.h  main.cc
strawx/: CMakeLists.txt  engine.cc  engine.h  input.cc  texture.cc  texture.h
strawx/core/: common.hh
